# xriweb

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: create-diagram.yml  drawio_export.yml  exportSync.yml  tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/drawio/: Untitled Diagram.drawio
drawio/: Untitled Diagram.drawio  iodiagram.drawio  readme.md
xriweb/: __init__.py  __main__.py  conftest.py  settings.py
xriweb/services/: __init__.py
xriweb/static/: __init__.py  globals.css  style.css
xriweb/static/img/: __init__.py
xriweb/static/model/: __init__.py  model2.h5  model2.json  modelresults
xriweb/static/model/temp/: __init__.py
xriweb/tests/: __init__.py
xriweb/web/: __init__.py  application.py  reshaperun.py  xri.py
xriweb/web/api/: __init__.py  router.py
xriweb/web/api/monitoring/: __init__.py
xriweb/web/templates/: __init__.py  index.html  results.html
