[tool.poetry]
name = "xriweb"
version = "0.1.0"
description = ""
authors = ["jens <jensmikkelandersen@gmail.com>"]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.109.1"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
pydantic = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
httptools = "^0.6.0"
jinja2 = "^3.1.2"
pydantic-settings = "2"
python-multipart = "^0.0.6"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
opencv-python = "^4.8.1.78"
tensorflow-io-gcs-filesystem = "0.27.0"
keras = ">=2.10.0,<2.11"
tensorflow = "2.10"
isort = "^5.12.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.12.0"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["xriweb",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "XRIWEB_ENVIRONMENT=pytest",
    "XRIWEB_DB_BASE=xriweb_test",
]

[fastapi-template.options]
project_name = "xriweb"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "None"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "xriweb"
enable_routers = "None"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "True"
add_dummy = "None"
orm = "none"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "None"
gunicorn = "None"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
